--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
         <img class="img-flex" src="images/stegosaurus.jpg" alt="">
-        <figcaption>Steosaurus</figcaption>
+        <figcaption>Stegosaurus</figcaption>
       </figure>
     </div>
   </div>
 
-  <div class="grid-2">
+  <div class="grid">
     <div class="unit xs-1 s-1 m-1 l-1-3">
       <figure>
         <img class="img-flex" src="images/archeopteryx.jpg" alt="">
